# kuva

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build-doom-assets.yml  (+2 more)
benches/: kde.rs  render.rs  svg.rs
examples/: all_plots_complex.rs  all_plots_simple.rs  band.rs  bar.rs  boxplot.rs  brick.rs  bump.rs  calendar.rs  candlestick.rs  chord.rs  clustermap.rs  contour.rs  datetime.rs  density.rs  diceplot.rs  dotplot.rs  ecdf.rs  figure.rs  font_sampler.rs  forest.rs  funnel.rs  gantt.rs  heatmap.rs  hexbin.rs  histogram.rs  histogram2d.rs  horizon.rs  jointplot.rs  layout.rs  legend_plot.rs  legends.rs  line.rs  lollipop.rs  manhattan.rs  mosaic.rs  network.rs  parallel.rs  phylo.rs  pie.rs  polar.rs  (+32 more)
man/: kuva.1
memory/: horizon_notes.md  jointplot_notes.md
scripts/: gen_docs.sh  smoke_tests.sh  terminal_plots.sh
src/: fonts.rs  lib.rs  prelude.rs
tests/: annotations_svg.rs  architecture.rs  band_svg.rs  bar_svg.rs  boxplot_svg.rs  brick_legend_columns.rs  brickplot.rs  bump_basic.rs  calendar_basic.rs  candlestick_svg.rs  chord_basic.rs  cli_basic.rs  clip_svg.rs  clustermap.rs  colormap_basic.rs  contour_svg.rs  datetime_svg.rs  density_basic.rs  diceplot_svg.rs  dotplot_svg.rs  ecdf_basic.rs  equal_aspect.rs  figure_svg.rs  forest_basic.rs  funnel_basic.rs  gantt_basic.rs  heatmap.rs  hexbin_basic.rs  hist2d_svg.rs  hist_svg.rs  horizon_basic.rs  interactive_svg.rs  jointplot.rs  label_centering_svg.rs  legend_api.rs  legend_plot_basic.rs  line_svg.rs  lollipop.rs  manhattan_svg.rs  marker_style_svg.rs  (+49 more)
(+226 files in other folders)
