[package]
name = "kuva"
version = "0.1.4"
edition = "2021"
description = "Scientific plotting library in Rust with various backends."
authors = ["James M. Ferguson <j.ferguson@garvan.org.au>"]
repository = "https://github.com/Psy-Fer/kuva"
license = "MIT"
keywords = ["plotting", "bioinformatics", "svg", "visualization", "science"]
categories = ["science", "visualization", "graphics", "command-line-utilities"]
documentation = "https://docs.rs/kuva"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
png  = ["dep:resvg"]
pdf  = ["dep:svg2pdf"]
cli  = ["dep:clap", "dep:clap_mangen"]
full = ["png", "pdf"]

[dependencies]
colorous = "=1.0.16"
chrono = { version = "0.4", default-features = false, features = ["std"] }
ryu = "1"
resvg       = { version = "0.44", optional = true }
svg2pdf     = { version = "0.13", optional = true }
clap        = { version = "4", features = ["derive"], optional = true }
clap_mangen = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.9.1"
rand_distr = "0.5.1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
image = "0.24"

[[bench]]
name = "render"
harness = false

[[bench]]
name = "kde"
harness = false

[[bench]]
name = "svg"
harness = false

[[bin]]
name = "kuva"
path = "src/bin/kuva/main.rs"
required-features = ["cli"]

[[example]]
name = "figure"

[[example]]
name = "all_plots_simple"

[[example]]
name = "all_plots_complex"
required-features = ["png"]

